--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "DH",
   "version": "0.0.1",
   "dependencies": {
-    "big-integer": "^1.6.26"
+    "big-integer": "^1.6.26",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
+    "morgan": "^1.9.0",
+    "request": "^2.83.0"
   }
 }
